# project-euler

./: .gitignore  Cargo.toml
solutions/: 10.rs  13.rs  14.rs  15.rs  2.rs  5.rs  6.rs  9.rs
