[package]
name = "project-euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = { version = "0.15.1", features = ["with-approx"] }
gcd = "2.3.0"
itertools = "0.12.1"
num = "0.4.1"
num-bigint = "0.4.4"
priority-queue = "2.0.2"
